added pending text color to css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Loading Flat UI -->
     <link href="css/flat-ui.css" rel="stylesheet">
 
+    <!-- Loading queue CSS -->
+    <link href="css/queue.css" rel="stylesheet">
+
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
